--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-Hello World!!
+<app-navbar></app-navbar>
+<app-about-me id="about"></app-about-me>
+<app-resume id="resume"></app-resume>
+<app-experience id="experience"></app-experience>
+<app-contact id="contact"></app-contact>
