--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,45 +1,25 @@
 <div class="page-content page-container" id="page-content">
-  <div class="padding">
+  <div class="padding bg">
       <div class="row container d-flex justify-content-center">
           <div class="col-xl-14 col-md-12">
               <div class="card user-card-full mx-auto">
                   <div class="row m-l-0 m-r-0">
-                      <div class="col-sm-4 bg-c-lite-green user-profile">
-                          <div class="card-block text-center text-white">
-                              <div class="m-b-25"> <img src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius" alt="User-Profile-Image"> </div>
-                              <h6 class="f-w-600">Ty Ponzo</h6>
-                              <p>Web Designer</p> <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
+                      <div class="col-sm-4 bg-c-lite-green user-profile d-flex justify-content-center">
+                          <div class="card-block text-white text-center align-items-center">
+                            <div class="circular--portrait m-b-25">
+                              <img src="assets/img/profile.jpg" />
+                            </div>
+                            <h3 class="f-w-500 m-b-25">Ty Ponzo</h3>
+                            <div class="row text-center align-items-center d-flex justify-content-center">
+                              <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+                              <a href="https://linkedin.com/in/ty-ponzo-9b83841a2" class="fa fa-linkedin m-r-10"></a>
+                              <a href="https://github.com/tponzo" class="fa fa-github m-l-10"></a>
+                            </div>
                           </div>
                       </div>
                       <div class="col-sm-8">
                           <div class="card-block">
-                              <h6 class="m-b-20 p-b-5 b-b-default f-w-600">Information</h6>
-                              <div class="row">
-                                  <div class="col-sm-6">
-                                      <p class="m-b-10 f-w-600">Email</p>
-                                      <h6 class="text-muted f-w-400">rntng@gmail.com</h6>
-                                  </div>
-                                  <div class="col-sm-6">
-                                      <p class="m-b-10 f-w-600">Phone</p>
-                                      <h6 class="text-muted f-w-400">98979989898</h6>
-                                  </div>
-                              </div>
-                              <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600">Projects</h6>
-                              <div class="row">
-                                  <div class="col-sm-6">
-                                      <p class="m-b-10 f-w-600">Recent</p>
-                                      <h6 class="text-muted f-w-400">Sam Disuja</h6>
-                                  </div>
-                                  <div class="col-sm-6">
-                                      <p class="m-b-10 f-w-600">Most Viewed</p>
-                                      <h6 class="text-muted f-w-400">Dinoter husainm</h6>
-                                  </div>
-                              </div>
-                              <ul class="social-link list-unstyled m-t-40 m-b-10">
-                                  <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="facebook" data-abc="true"><i class="mdi mdi-facebook feather icon-facebook facebook" aria-hidden="true"></i></a></li>
-                                  <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="twitter" data-abc="true"><i class="mdi mdi-twitter feather icon-twitter twitter" aria-hidden="true"></i></a></li>
-                                  <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="instagram" data-abc="true"><i class="mdi mdi-instagram feather icon-instagram instagram" aria-hidden="true"></i></a></li>
-                              </ul>
+                              <h3 class="m-b-20 p-b-5 b-b-default f-w-600">Information</h3>
                           </div>
                       </div>
                   </div>
