--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navbar></app-navbar>
+<app-home id="home"></app-home>
 <app-about-me id="about"></app-about-me>
-<app-resume id="resume"></app-resume>
 <app-experience id="experience"></app-experience>
