--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="nav sticky-top">
+  <div (click)="toHome()">Home</div>
 	<div (click)="toAbout()">About</div>
-	<div (click)="toResume()">Resume</div>
 	<div (click)="toExperience()">Experience</div>
 </div>
