--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -17,9 +17,30 @@
                             </div>
                           </div>
                       </div>
-                      <div class="col-sm-8">
+                      <div class="col-sm-8 d-flex justify-content-center">
                           <div class="card-block">
-                              <h3 class="m-b-20 p-b-5 b-b-default f-w-600">Information</h3>
+                            <h3 class="m-b-20 p-b-5 p-t-5 b-b-default f-w-600">About Me</h3>
+                            <div class="desc">
+                              Currently a Computer Science Undergraduate at the University of Texas at Dallas.
+                              <br><br>
+                            </div>
+                            <div class="desc">
+                              I have experience with developing full-stack web and mobile applications.
+                              My goal is to have an impact on meaningful projects by continuously improving and expanding my programming abilities.
+                              <br><br>
+                            </div>
+                            <div class="desc">
+                              My hobbies include cooking, skating, and watching Netflix.
+                              <br><br>
+                            </div>
+                            <div class="desc col-sm-8">
+                              <table class="row" cellspacing="0" cellpadding="0">
+                                <tr>
+                                  <td><div>Find my resume&nbsp;</div></td>
+                                  <td><div (click)="openResume()" class="link">here</div></td>
+                                </tr>
+                              </table>
+                            </div>
                           </div>
                       </div>
                   </div>
