--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,1 +1,5 @@
-<p class="container">experience works!</p>
+<div class="page-content page-container" id="page-content">
+  <div class="padding bg">
+    <p>Experience</p>
+  </div>
+</div>
