--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,6 +1,6 @@
 <div class="page-content page-container" id="page-content">
   <div class="padding bg">
-      <div class="row container d-flex justify-content-center">
+      <div class="row container d-flex justify-content-center" data-aos="zoom-in" data-aos-duration="1000">
           <div class="col-xl-14 col-md-12">
               <div class="card user-card-full mx-auto">
                   <div class="row m-l-0 m-r-0">
