--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -13,7 +13,9 @@
           <div class="card-body border-top">
             <h5 class="card-title">Digital Profolio</h5>
             <div class="card-content">
-              <p class="card-text">A digital porfolio of me and my projects.</p>
+              <p class="card-text">
+                A digital portfolio of me and my projects.
+              </p>
               <p class="card-text sub-text">Angular & Github Pages</p>
               <a
                 href="https://github.com/tponzo/tponzo.github.io"
@@ -82,6 +84,12 @@
                 class="btn btn-primary mt-auto align-self-start"
               >
                 Source
+              </a>
+              <a
+                href="https://devpost.com/software/match-comet"
+                class="btn btn-primary mt-auto align-self-start"
+              >
+                Devpost
               </a>
             </div>
           </div>
